2010-01-11  Tony Chang  <tony@chromium.org>

Reviewed by Eric Seidel.

        Have "Paste and Match Style" fire the dom paste event.
        https://bugs.webkit.org/show_bug.cgi?id=30639

        * editing/execCommand/paste-and-match-style-event.html: Added.
2010-01-11  Tony Chang  <tony@chromium.org>

        Reviewed by Eric Seidel.

        Have "Paste and Match Style" fire the dom paste event.
        https://bugs.webkit.org/show_bug.cgi?id=30639

        Test: editing/execCommand/paste-and-match-style-event.html

        * editing/Editor.cpp:
        (WebCore::Editor::pasteAsPlainText):

git-svn-id: svn://svn.chromium.org/blink/trunk@53068 bbb929c8-8fbe-4397-9dbb-9b2b20218538